--- a/.github/workflows/manual-approval.yml
+++ b/.github/workflows/manual-approval.yml
@@ -14,7 +14,7 @@ jobs:
     
     production:
         runs-on: ubuntu-latest
-        environment: development
+        environment: production
         steps:
             - name: Deploy to the production environment
               run: echo "Deploying to prod"
