--- a/.github/workflows/manual-approval.yml
+++ b/.github/workflows/manual-approval.yml
@@ -10,7 +10,7 @@ jobs:
         environment: development
         steps:
             - name: Deploy to the development environment
-              run: echo "Deploying to dev"
+              run: echo "Deploying to dev environment"
     
     production:
         runs-on: ubuntu-latest
@@ -18,4 +18,4 @@ jobs:
         needs: development
         steps:
             - name: Deploy to the production environment
-              run: echo "Deploying to prod"
+              run: echo "Deploying to prod environment"
